# prisma-py-sandbox

./: .envrc  README.md  Taskfile.yml  pyproject.toml
src/prisma_py_sandbox/: __init__.py  __main__.py
src/prisma_py_sandbox/prisma_test/prisma_output_test/: actions.py  bases.py  client.py  metadata.py  models.py  schema.prisma  types.py
tools/postgres/: docker-compose-local.yml  schema.sql
tools/psqldef/: Dockerfile
